kubernetes/apps/flux-system/capacitor/example.yaml
---

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app capacitor
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10G"
    nginx.ingress.kubernetes.io/client-max-buffer-size: "10G"
    traefik.ingress.kubernetes.io/router.middlewares: network-oidc-auth@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host capacitor.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
  tls:
    - hosts:
        - capacitor.cloud.icylair.com
      secretName: icylair-com-all-prod
